packages and file structure

--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -30,7 +30,10 @@
         {{> atForm state='signIn'}}
     </div>
     {{/if}}
+
     {{/content}}
+
+    <section id="webix-playground"></section>
 </template>
 
 <template name="teamLink">
