--- a/client/views/block-helpers/header.html
+++ b/client/views/block-helpers/header.html
@@ -35,7 +35,9 @@
 
                     <ul class="nav navbar-nav navbar-right">
                         <li class="{{ isActiveRoute regex='home' }}"><a href="{{ pathFor 'home' }}"><i class="fa fa-home"></i> Home</a></li>
-                        <li class="{{ isActiveRoute regex='dashboard' }}"><a href="{{ pathFor 'dashboard' }}"><i class="fa fa-gear"></i> Dashboard</a></li>
+                        <li class="{{ isActiveRoute regex='addtask' }}"><a href="{{ pathFor 'addtask' }}"><i class="fa fa-plus-circle"></i> Add Task</a></li>
+                        <li class="{{ isActiveRoute regex='tasklist' }}"><a href="{{ pathFor 'tasklist' }}"><i class="fa fa-tasks "></i> Task List</a></li>
+                        <li class="{{ isActiveRoute regex='planninglist' }}"><a href="{{ pathFor 'planninglist' }}"><i class="fa fa-plane"></i> Planning List</a></li>
                     </ul>
                 </div>
 
