--- a/client/views/addtask/addtask.html
+++ b/client/views/addtask/addtask.html
@@ -1,7 +1,7 @@
-<template name="dashboard">
-    <div class="template-dashboard">
+<template name="addtask">
+    <div class="template-addtask">
         <div class="page-header">
-            <h1>Dashboard</h1>
+            <h1>Add Task</h1>
         </div>
 
 
