--- a/client/views/tasklist/takslist.html
+++ b/client/views/tasklist/takslist.html
@@ -1,7 +1,7 @@
-<template name="dashboard">
-    <div class="template-dashboard">
+<template name="tasklist">
+    <div class="template-tasklist">
         <div class="page-header">
-            <h1>Dashboard</h1>
+            <h1>Tasks</h1>
         </div>
 
 
