--- a/client/views/planninglist/planninglist.html
+++ b/client/views/planninglist/planninglist.html
@@ -1,7 +1,7 @@
-<template name="dashboard">
-    <div class="template-dashboard">
+<template name="planninglist">
+    <div class="template-planninglist">
         <div class="page-header">
-            <h1>Dashboard</h1>
+            <h1>Planning</h1>
         </div>
 
 
