--- a/client/views/planningpoker/planningpoker.html
+++ b/client/views/planningpoker/planningpoker.html
@@ -1,7 +1,7 @@
-<template name="dashboard">
-    <div class="template-dashboard">
+<template name="planningpoker">
+    <div class="template-planningpoker">
         <div class="page-header">
-            <h1>Dashboard</h1>
+            <h1>Planning Poker</h1>
         </div>
 
 
