--- a/client/views/block-helpers/footer.html
+++ b/client/views/block-helpers/footer.html
@@ -2,7 +2,7 @@
     <footer>
         <div class="container">
             <p class="text-center text-muted">
-                &copy; Copyright Team 4 Title
+                &copy; Build by SMART Team
             </p>
         </div>
     </footer>
