--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -1,10 +1,18 @@
 <template name="home">
-    <div class="template-home">
+    <div class="template-home center-block">
         <div class="page-header">
-            <h1>Welcome to Project Title</h1>
+            <h1>Welcome to SMART Planning Poker</h1>
+            <img src="images/logo.jpg" alt="SMART Planning Poker"/>
         </div>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+        <h4>
+            Be SMART and
+            {{#if currentUser}}
+            <a href="{{ pathFor 'tasklist' }}" class="btn btn-primary navbar-btn">Start estimate</a>
+            {{else}}
+            <a href="{{ pathFor 'atSignUp' }}" class="btn btn-primary navbar-btn">Register</a>
+
+            {{/if}}
+
+        </h4>
     </div>
 </template>
