--- a/client/views/block-helpers/header.html
+++ b/client/views/block-helpers/header.html
@@ -11,7 +11,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="{{pathFor 'home'}}">Project Title</a>
+                    <a class="navbar-brand" href="{{pathFor 'home'}}">SMART Planning Poker</a>
                 </div>
 
                 <div class="collapse navbar-collapse" id="main-nav">
