--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -1,5 +1,5 @@
 <template name="home">
-    <div class="template-home center-block">
+    <div class="template-home center-block text-center">
         <div class="page-header">
             <h1>Welcome to SMART Planning Poker</h1>
             <img src="images/logo.jpg" alt="SMART Planning Poker"/>
