--- a/client/views/tasklist/takslist.html
+++ b/client/views/tasklist/takslist.html
@@ -3,6 +3,23 @@
         <div class="page-header">
             <h1>Tasks</h1>
         </div>
+        <table class="table">
+            <thead>
+            <tr>
+                <th>Task ID</th>
+                <th>Task Subject</th>
+                <th>Task Description</th>
+                <th></th>
+                <th></th>
+                <th></th>
+            </tr>
+            </thead>
+            <tbody>
+
+            </tbody>
+        </table>
+
+
         <ul>
             {{#each tasks}}
                 {{>task_item}}
