--- a/client/views/tasklist/takslist.html
+++ b/client/views/tasklist/takslist.html
@@ -3,9 +3,10 @@
         <div class="page-header">
             <h1>Tasks</h1>
         </div>
-        <table class="table">
+        <table class="table table-hover">
             <thead>
             <tr>
+                <th></th>
                 <th>Task ID</th>
                 <th>Task Subject</th>
                 <th>Task Description</th>
@@ -15,15 +16,13 @@
             </tr>
             </thead>
             <tbody>
-
+            {{#each tasks}}
+                {{>task_item}}
+            {{/each}}
             </tbody>
         </table>
 
 
-        <ul>
-            {{#each tasks}}
-                {{>task_item}}
-            {{/each}}
-        </ul>
+
     </div>
 </template>
