--- a/client/views/tasklist/task_item.html
+++ b/client/views/tasklist/task_item.html
@@ -4,8 +4,8 @@
         <td>{{taskId}}</td>
         <td>{{taskName}}</td>
         <td>{{taskDescription}}</td>
-        <td><button type="button" class="btn btn-warning">View</button></td>
-        <td><button type="button" class="btn btn-warning">Edit</button></td>
+        <td><button type="button" class="btn btn-success">View</button></td>
+        <td><button type="button" class="btn btn-success" disabled="disabled">Edit</button></td>
         <td><button type="button" class="btn btn-danger">Delete</button></td>
 
     </tr>
