styled view tasks list

--- a/client/views/tasklist/takslist.html
+++ b/client/views/tasklist/takslist.html
@@ -22,7 +22,13 @@
             </tbody>
         </table>
 
+        <div>
+            <a  class="btn btn-primary" href="{{ pathFor 'addtask' }}"> <i class="fa fa-plus-circle"></i> Add new task</a>
+            <p>Check the box infront of the task ID and press the button "Create Story Planning Session" to create a Planning Session</p>
+            <button type="button" class="btn btn-primary">Create Story Planning Session</button>
 
+
+        </div>
 
     </div>
 </template>
