--- a/client/views/block-helpers/footer.html
+++ b/client/views/block-helpers/footer.html
@@ -1,6 +1,5 @@
 <template name="footer" >
-    <footer style="  background-color: #f8f8f8;
-                     border-top: 1px solid #e7e7e7;">
+    <footer>
         <div class="container">
             <p class="text-center text-muted">
                 &copy; Build by SMART Team
