--- a/client/views/tasklist/takslist.html
+++ b/client/views/tasklist/takslist.html
@@ -10,7 +10,7 @@
                 <th>Task ID</th>
                 <th>Task Subject</th>
                 <th>Task Description</th>
-                <th></th>
+                <th>Creator votes</th>
                 <th></th>
                 <th></th>
             </tr>
