general UI improvement

--- a/client/views/tasklist/task_item.html
+++ b/client/views/tasklist/task_item.html
@@ -9,6 +9,7 @@
             {{else}}
              <i class="fa fa-times-circle-o"></i> no
             {{/if}}</td>
+        <td><i class="fa fa-times-circle-o"></i> no</td>
         <td><button type="button" class="btn btn-success" disabled="disabled" >Edit</button></td>
         <td><button type="button" class="btn btn-danger delete">Delete</button></td>
 
