--- a/client/main.css
+++ b/client/main.css
@@ -17,13 +17,23 @@ body {
 footer {
     background-color: #f8f8f8;
     border-top: 1px solid #e7e7e7;
-    bottom: 0;
-    position: absolute;
-    width: 100%;
-    height: 50px;
+
 }
 
 .container{
-    padding-bottom: 50px;
-    box-sizing: content-box;
+
+}
+
+.table{
+    table-layout: fixed;
+}
+
+.table td{
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.mainContent{
+    min-height: 870px;
 }
