--- a/client/views/block-helpers/footer.html
+++ b/client/views/block-helpers/footer.html
@@ -1,9 +1,13 @@
-<template name="footer" >
-    <footer>
-        <div class="container">
-            <p class="text-center text-muted">
-                &copy; Build by SMART Team
-            </p>
-        </div>
-    </footer>
+<template name="footer">
+
+    <nav class="navbar navbar-default navbar-static-bottom" role="navigation">
+        <footer>
+            <div class="container">
+                <p class="text-center text-muted">
+                    &copy; Build by SMART Team
+                </p>
+            </div>
+        </footer>
+    </nav>
+
 </template>
