--- a/client/views/tasklist/takslist.html
+++ b/client/views/tasklist/takslist.html
@@ -1,7 +1,7 @@
 <template name="tasklist">
     <div class="template-tasklist">
         <div class="page-header">
-            <h1>Tasks</h1>
+            <h1>Tasks List</h1>
         </div>
         <table class="table table-hover">
             <thead>
@@ -11,7 +11,7 @@
                 <th>Task Subject</th>
                 <th>Task Description</th>
                 <th>Creator votes</th>
-                <th></th>
+                <th>Imported from Jira</th>
                 <th></th>
             </tr>
             </thead>
