--- a/client/views/planninglist/planning_item.html
+++ b/client/views/planninglist/planning_item.html
@@ -1,10 +1,10 @@
 <template name="planning_item">
     <tr >
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>{{sessionName}}</td>
+        <td>{{prettifyDate scheduledOn}}</td>
+        <td>{{prettifyDate createdAt}}</td>
+        <td>{{createdBy}}</td>
+        <td>{{totalPoints}}</td>
         <td></td>
     </tr>
 
