Task Route add collections

--- a/client/views/tasklist/task_item.html
+++ b/client/views/tasklist/task_item.html
@@ -1,6 +1,6 @@
 <template name="task_item">
     <tr >
-        <td><input type="checkbox" /></td>
+        <td><input type="checkbox" class="check"/></td>
         <td>{{taskId}}</td>
         <td>{{taskName}}</td>
         <td>{{taskDescription}}</td>
