--- a/client/views/tasklist/takslist.html
+++ b/client/views/tasklist/takslist.html
@@ -25,7 +25,7 @@
         <div>
             <a  class="btn btn-primary" href="{{ pathFor 'addtask' }}"> <i class="fa fa-plus-circle"></i> Add new task</a>
             <p>Check the box infront of the task ID and press the button "Create Story Planning Session" to create a Planning Session</p>
-            <button type="button" class="btn btn-primary">Create Story Planning Session</button>
+            <a class="btn btn-primary"  href="{{ pathFor 'addplanning' }}">Create Story Planning Session</a>
 
 
         </div>
