--- a/client/views/planninglist/planning_item.html
+++ b/client/views/planninglist/planning_item.html
@@ -5,7 +5,7 @@
         <td>{{prettifyDate createdAt}}</td>
         <td>{{createdBy}}</td>
         <td>{{totalPoints}}</td>
-        <td></td>
+        <td><button type="button" class="btn btn-success">Join Session</button></td>
     </tr>
 
 </template>
