--- a/client/main.css
+++ b/client/main.css
@@ -37,3 +37,41 @@ footer {
 .mainContent{
     min-height: 870px;
 }
+
+.card, .card2{
+    width:100px;
+    height:100px;
+    background:red;
+    border: 5px solid white;
+}
+
+.card2{
+    background: orange;
+}
+
+.card2>p{
+    line-height: 90px;
+    font-size: 50px;
+    color: white;
+    font-weight: bold;
+    text-align: center;
+}
+.story-counter{
+    border:1px solid black;
+}
+
+.play-summary{
+    height: 70px;
+    padding: 10px 0 10px 0;
+}
+.play-summary> div{
+    height:50px;
+    border: 1px solid black;
+    box-sizing: border-box;
+
+}
+
+.counter p{
+    line-height: 50px;
+    font-size:50px;
+}
