--- a/client/views/planningpoker/planningpoker.html
+++ b/client/views/planningpoker/planningpoker.html
@@ -3,7 +3,108 @@
         <div class="page-header">
             <h1>Planning Poker</h1>
         </div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-10">
+                    <div class="mainContentWrapper">
+                        <div class="row play-summary">
+                            <div class="col-md-2 story-counter">
+                                <p>Story</p>
+                                <p>1/10</p>
+                            </div>
+                            <div class="col-md-8">
+                                <p>Story description</p>
+                                <p>1/10</p>
+                            </div>
+                            <div class="col-md-2 counter" >
+                                <p>10s</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12 row">
+                                <div class="card col-md-2 ">
 
+                                </div>
+                                <div class="card col-md-2 ">
+
+                                </div>
+                                <div class="card col-md-2 ">
+
+                                </div>
+                                <div class="card col-md-2 ">
+
+                                </div>
+                                <div class="card col-md-2 ">
+
+                                </div>
+                                <div class="card col-md-2 ">
+
+                                </div><div class="card col-md-2 ">
+
+                            </div>
+                                <div class="card col-md-2 ">
+
+                                </div>
+                                <div class="card col-md-2 ">
+
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12 row">
+                            <div class="card2 col-md-2">
+                               <p>1</p>
+                            </div>
+                            <div class="card2 col-md-2">
+                                <p>2</p>
+                            </div>
+                            <div class="card2 col-md-2">
+                                <p>3</p>
+                            </div>
+                            <div class="card2 col-md-2">
+                                <p>5</p>
+                            </div>
+                            <div class="card2 col-md-2">
+                                <p>8</p>
+                            </div>
+                            <div class="card2 col-md-2">
+                                <p>13</p>
+                            </div>
+                            <div class="card2 col-md-2">
+                                <p>21</p>
+                            </div>
+                            <div class="card2 col-md-2">
+                                <p>?</p>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="row">
+                        <div class="col-md-12">
+                            Planning poker Store
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <ul>
+                                <li>Player 1</li>
+                                <li>Player 2</li>
+
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            CHAT
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </div>
 </template>
