--- a/client/views/addplanning/addplanning.html
+++ b/client/views/addplanning/addplanning.html
@@ -3,17 +3,62 @@
         <div class="page-header">
             <h1>Add a Planning Session</h1>
         </div>
-        <div>
+        <div class="container">
             {{#autoForm collection="planningSessions" doc=this id="insertPlanningSession" type="insert"}}
-            <fieldset>
-                {{> afQuickField name='sessionName'}}
-                {{> afQuickField name='sessionDescription'}}
-                {{> afQuickField name='taskDescription' rows=6}}
-                {{> afQuickField name='participant'}}
-            </fieldset>
-            <button type="submit" class="btn btn-primary">Insert</button>
+            <div class="row">
+                <div class="col-sm-6">
+                    <fieldset>
+                        {{> afQuickField name='sessionName'}}
+                        {{> afQuickField name='sessionDescription' rows=6}}
+                    </fieldset>
+                    <table class="table table-hover">
+                        <thead>
+                        <tr>
+                            <th>Task ID</th>
+                            <th>Task Subject</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {{#each tasks}}
+                        {{>task_item_show}}
+                        {{/each}}
+                        </tbody>
+                    </table>
+                </div>
+                <div class="col-sm-6">
+                    <table class="table table-hover">
+                        <thead>
+                        <tr>
+                            <th></th>
+                            <th>Users</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {{#each users}}
+                        <tr>
+                            <td><input type="checkbox" name="participants[]" class="check" value="{{_id}}"/></td>
+                            <td>{{#each emails}}
+                                    {{address}}<br >
+                                {{/each}}</td>
+                        </tr>
+                        {{/each}}
+                        </tbody>
+                    </table>
+
+                    {{> afQuickField name='scheduledOn' type='bootstrap-datetimepicker'}}
+                    {{> afQuickField name='emailNotify' }}
+                </div>
+            </div>
+            <button type="clear" class="btn btn-default cancel">Cancel</button>
+            <button type="submit" class="btn btn-primary">Save</button>
             {{/autoForm}}
         </div>
-
     </div>
+
+</template>
+<template name="task_item_show">
+    <tr>
+        <td>{{taskId}}<input type="hidden" name="tasks[]" value="{{_id}}"/></td>
+        <td>{{taskName}}</td>
+    </tr>
 </template>
