--- a/client/views/planningpoker/planningpoker.html
+++ b/client/views/planningpoker/planningpoker.html
@@ -10,7 +10,7 @@
                         <div class="row play-summary">
                             <div class="col-md-2 story-counter">
                                 <p>Story</p>
-                                <p>1/10</p>
+                                <p>{{storyNumbers}}</p>
                             </div>
                             <div class="col-md-8">
                                 <p>Story description</p>
