--- a/client/views/planningpoker/chat_item.html
+++ b/client/views/planningpoker/chat_item.html
@@ -7,3 +7,9 @@
     </li>
 
 </template>
+
+<template name="vote_item">
+    <div class="card col-md-2 ">
+        {{vote}}
+    </div>
+</template>
